package com.example.seabattle.data.repository


import android.util.Log
import com.example.seabattle.domain.auth.LoginMethod
import com.example.seabattle.domain.auth.repository.AuthRepository
import com.example.seabattle.domain.model.UserProfile
import com.google.firebase.auth.FirebaseAuth
import com.google.firebase.auth.GoogleAuthProvider
import com.google.firebase.auth.userProfileChangeRequest
import kotlinx.coroutines.tasks.await

class AuthRepositoryImpl(
    private val auth: FirebaseAuth
) : AuthRepository {

    override suspend fun registerUser(email: String, password: String) : Boolean {
        try {
            val authResult = auth.createUserWithEmailAndPassword(email, password).await()
            return (authResult.user != null)
        } catch (e: Exception) {
            Log.e("AuthRepository", "Register with email and password failed", e)
            return false
        }
    }


    override suspend fun loginUser(method: LoginMethod) : Boolean {
        when (method) {
            is LoginMethod.EmailPassword -> {
                try {
                    val authResult = auth.signInWithEmailAndPassword(method.email, method.password).await()
                    return (authResult.user != null)
                } catch (e: Exception) {
                    Log.e("AuthRepository", "Login with email and password failed", e)
                    return false
                }
            }
            is LoginMethod.Google -> {
                try {
                    val credential = GoogleAuthProvider.getCredential(method.googleIdToken, null)
                    val authResult = auth.signInWithCredential(credential).await()
                    return (authResult.user != null)
                } catch (e: Exception) {
                    Log.e("AuthRepository", "Google login failed", e)
                    return false
                }
            }
        }
    }


    override fun logoutUser() {
        auth.signOut()
    }


    override fun isLoggedIn() : Boolean {
        return (auth.currentUser != null)
    }


    override fun getAuthUserProfile(): UserProfile? {
        val user = auth.currentUser
        return user?.let {
            UserProfile(
                userId = it.uid,
                displayName = it.displayName ?: it.providerData[0]?.displayName ?: "",
                email =  it.email ?: it.providerData[0]?.email ?: "",
                photoUrl = (it.photoUrl ?: it.providerData[0]?.photoUrl ?: "").toString()
            )
        }
        return null
    }


    override suspend fun setUserName(userName: String) {
        try {
            val user = auth.currentUser
            if (user != null) {
                val profileUpdates = userProfileChangeRequest {
                    displayName = userName
                }
                user.updateProfile(profileUpdates).await()
            }
        } catch (e: Exception) {
            Log.e("Update Profile", "Update failed", e)
        }
    }
}
