@startuml


rectangle "Data" {
    class SessionManager
    class FiresStoreRepositoryImpl
    class AuthRepositoryImpl

    rectangle "Local Storage" {
        class SecurePrefsData
    }

    rectangle "Firebase Services" {
        class FirebaseAuth
        class FiresStore
    }
}

rectangle "Domain" {
    interface FiresStoreRepository
    interface AuthRepository
    class LoginUserUseCase
    class RegisterUserUseCase
}

rectangle "Presentation" {
    class WelcomeScreen
    class googleSignIn
    class WelcomeViewModel
}


WelcomeScreen --> WelcomeViewModel

WelcomeViewModel <--> googleSignIn
WelcomeViewModel --> LoginUserUseCase
WelcomeViewModel --> RegisterUserUseCase

LoginUserUseCase --> SessionManager
RegisterUserUseCase --> SessionManager

SessionManager --> SecurePrefsData

SessionManager <-- AuthRepository
AuthRepository <-- AuthRepositoryImpl
AuthRepositoryImpl <--> FirebaseAuth

SessionManager <-- FiresStoreRepository
FiresStoreRepository <-- FiresStoreRepositoryImpl
FiresStoreRepositoryImpl <--> FiresStore
@enduml
